# regit-covariance

./: .gitignore  CHANGELOG.md  Cargo.toml  MATH.md  NOTICE  README.md  SECURITY.md  deny.toml  justfile
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/regit-covariance/: Cargo.toml
crates/regit-covariance-server/: Cargo.toml
crates/regit-covariance-server/src/: main.rs
crates/regit-covariance-server/src/api/: compute.rs  mod.rs  routes.rs
crates/regit-covariance-yahoo/: Cargo.toml
crates/regit-covariance-yahoo/src/: lib.rs
crates/regit-covariance/benches/: eigendecompose.rs
crates/regit-covariance/examples/: quickstart.rs
crates/regit-covariance/src/: lib.rs
crates/regit-covariance/src/data/: mod.rs  returns.rs
crates/regit-covariance/src/math/: condition.rs  denoise.rs  eigen.rs  ledoit_wolf.rs  marchenko_pastur.rs  sri.rs  var.rs
crates/regit-covariance/tests/: denoise_identity.rs  mp_analytical.rs  pipeline_full.rs  psd_check.rs  trace_preservation.rs
examples/: quickstart.rs
src/: lib.rs  main.rs
src/api/: compute.rs  routes.rs  sse.rs  state.rs
src/data/: mod.rs
src/data/provider/: mod.rs  yahoo.rs
src/math/: denoise.rs  detone.rs  eigen.rs  ledoit_wolf.rs  marchenko_pastur.rs  mod.rs  sample_covariance.rs  sri.rs  var.rs
static/: index.html
tests/: denoise_identity.rs  mp_analytical.rs  pipeline_full.rs  psd_check.rs  trace_preservation.rs
