[package]
name = "regit-covariance"
version = "0.1.2"
edition = "2024"
rust-version = "1.94"
authors = ["Nicolas Koenig <nicolas.koenig@regit.io>"]
description = "Covariance matrix denoising for financial risk validation. Marchenko-Pastur filtering, Ledoit-Wolf shrinkage, detoning."
license = "Apache-2.0"
repository = "https://github.com/org-regit-io/regit-covariance"
homepage = "https://www.regit.io"
keywords = ["covariance", "marchenko-pastur", "risk", "finance", "denoising"]
categories = ["mathematics", "science", "finance"]
readme = "README.md"

[dependencies]
nalgebra = "0.33"
reqwest = { version = "0.12", features = ["json"] }
async-stream = "0.3"
axum = { version = "0.8", features = ["json"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6.8", features = ["fs"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
approx = "0.5"
tokio-test = "0.4"

[[bench]]
name = "eigendecompose"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
