[package]
name = "regit-covariance-server"
description = "Axum HTTP server with SSE streaming for the regit-covariance pipeline. Demo / visualisation; not for crates.io publication."
keywords = ["covariance", "axum", "sse", "regit", "visualisation"]
categories = ["finance", "web-programming"]
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[[bin]]
name = "regit-covariance-server"
path = "src/main.rs"

[dependencies]
regit-covariance = { workspace = true }
regit-covariance-yahoo = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
